@startuml

title __CS213-PROGRAM2's Class Diagram__\n

  namespace  {
    class Instate {
    }
  }
  

  namespace  {
    class International {
    }
  }
  

  namespace  {
    class Outstate {
    }
  }
  

  namespace  {
    abstract class Student {
    }
  }
  

  namespace  {
    class StudentList {
    }
  }
  

  namespace  {
    class TuitionManager {
    }
  }
  

  Instate -up-|> Student
  International -up-|> Student
  Outstate -up-|> Student
  Student .up.|> java.lang.Comparable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
